Add fixes