@@ -2,13 +2,10 @@ package com.vlad.kuzhyr.driverservice.utility.mapper.converter;
 
 
 import com.vlad.kuzhyr.driverservice.utility.constant.Role;
-import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
@@ -24,7 +21,7 @@ public class KeycloakJwtConverter implements Converter<Jwt, JwtAuthenticationTok
         );
     }
 
-    private Collection<GrantedAuthority> extractValidRoles(Jwt jwt) {
+    private List<SimpleGrantedAuthority> extractValidRoles(Jwt jwt) {
         Map<String, Object> realmAccess = jwt.getClaim("realm_access");
         if (realmAccess == null) {
             return List.of();
@@ -37,7 +34,7 @@ public class KeycloakJwtConverter implements Converter<Jwt, JwtAuthenticationTok
             .filter(validRoleNames::contains)
             .map(role -> Role.valueOf(role.toUpperCase()).asSpringRole())
             .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
